--- a/style.css
+++ b/style.css
@@ -180,6 +180,7 @@ margin-top: 15%;
  .main{
  margin: 0 auto;
  width: 90vw;
+ display: grid; 
  }
 
 
@@ -248,7 +249,6 @@ margin-top: 15%;
   justify-content: space-around;
   height: 80vh;
   align-items: center;
-  padding-bottom: var(--padding);
   margin-bottom: var(--margin);
 }
 
@@ -356,7 +356,6 @@ margin-top: 15%;
     justify-content: space-around;
     height: 80vh;
     align-items: center;
-    padding-bottom: var(--padding);
     margin-bottom: var(--margin);
   }
 
