--- a/style.css
+++ b/style.css
@@ -180,7 +180,6 @@ margin-top: 15%;
  .main{
  margin: 0 auto;
  width: 90vw;
- 
  }
 
 
@@ -249,6 +248,7 @@ margin-top: 15%;
   justify-content: space-around;
   height: 80vh;
   align-items: center;
+  padding-bottom: var(--padding);
   margin-bottom: var(--margin);
 }
 
@@ -356,6 +356,7 @@ margin-top: 15%;
     justify-content: space-around;
     height: 80vh;
     align-items: center;
+    padding-bottom: var(--padding);
     margin-bottom: var(--margin);
   }
 
