--- a/style.css
+++ b/style.css
@@ -529,10 +529,12 @@ margin-top: 15%;
    small phones
  ******************/
 
- @media  only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2) {
+ @media  only screen and (-webkit-min-device-pixel-ratio: 2)      and (min-width: 320px),
+only screen and (   min--moz-device-pixel-ratio: 2)      and (min-width: 320px),
+only screen and (     -o-min-device-pixel-ratio: 2/1)    and (min-width: 320px),
+only screen and (        min-device-pixel-ratio: 2)      and (min-width: 320px),
+only screen and (                min-resolution: 192dpi) and (min-width: 320px),
+only screen and (                min-resolution: 2dppx)  and (min-width: 320px)  {
 
 
 .logo{
@@ -550,6 +552,7 @@ margin-top: 15%;
  ***********************/
 .men-section-container, .women-section-container{
    min-height: 60vh;
+   margin-top: var(--margin);
 }
 
 .men-section-title, .women-section-title{
@@ -594,6 +597,7 @@ margin-top: 15%;
 
     .men-section-container, .women-section-container{
        min-height: 65vh;
+       margin-top: var(--margin);
     }
 
 
