--- a/style.css
+++ b/style.css
@@ -555,9 +555,7 @@ margin-top: 15%;
 .men-section-container, .women-section-container{
    min-height: 60vh;
    margin-top: cal(var(--margin)*2.5);
-   display: grid;
-   row-gap: var(--gridRowGap);
-   place-items: center;
+   padding-top: 1.5rem;
 }
 
 .men-section-title, .women-section-title{
@@ -605,11 +603,9 @@ margin-top: 15%;
   and (-webkit-min-device-pixel-ratio: 2) {
 
     .men-section-container, .women-section-container{
-       display: grid;
-       row-gap: var(--gridRowGap);
-       place-items: center;
        min-height: 65vh;
        margin-top: calc(var(--margin)*2.5);
+       padding-top: 1.5rem;
     }
 
     .middle{
