--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ margin-top: 15%;
     styling
   ***************************/
 .intro{
-  height: 45vh;
+  height: auto;
   /* padding-bottom: var(--padding); */
   margin-bottom: var(--margin);
   position: relative;
@@ -198,7 +198,7 @@ margin-top: 15%;
 /* Slides Container */
 
 .slideContainer{
-  height: 100%;
+  height: 45vh;
   width: 100%;
   display: flex;
   overflow-x: hidden;
@@ -247,7 +247,7 @@ margin-top: 15%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 80vh;
+  height: auto;
   align-items: center;
   margin-bottom: var(--margin);
 }
@@ -256,7 +256,7 @@ margin-top: 15%;
   display: grid;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
-  height: 100%;
+  height: 80vh;
   width: 100%;
   grid-row-gap: var(--gridRowGap);
   grid-column-gap: var(--gridColumnGap);
@@ -319,7 +319,7 @@ margin-top: 15%;
   *********************/
 
 .middle{
-  height: 45vh;
+  height: auto;
   position: relative;
   margin-bottom: var(--margin);
 }
@@ -332,7 +332,7 @@ margin-top: 15%;
 }
 
 .middle-slides-container{
-  height: 100%;
+  height: 45vh;
   width: 100%;
   display: flex;
   overflow-x: hidden;
@@ -354,7 +354,7 @@ margin-top: 15%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 80vh;
+    height: auto;
     align-items: center;
     margin-bottom: var(--margin);
   }
@@ -365,7 +365,7 @@ margin-top: 15%;
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
-    height: 100%;
+    height: 80vh;
     width: 100%;
     grid-row-gap: var(--gridRowGap);
     grid-column-gap: var(--gridColumnGap);
