--- a/style.css
+++ b/style.css
@@ -541,9 +541,10 @@ margin-top: 15%;
       slides styling
      ****************/
 
-     .slideContainer, .middle-slides-container{
+  .slideContainer, .middle-slides-container{
        height: 45vh;
      }
+
 .logo{
  transform: scale(.6);
 }
@@ -569,7 +570,7 @@ margin-top: 15%;
 }
 
 .men-section-product-container, .women-section-product-container{
-  width: 100%;
+   height: 40vh;
 }
 
 .men-product-description, .women-product-description{
@@ -620,8 +621,8 @@ margin-top: 15%;
   /******************
      Men and Women
    *******************/
-    .men-section-container, .women-section-container{
-
+    .men-section-product-container, .women-section-product-container{
+       height: 40vh;
 
     }
 
