--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ a{
  body{
    background-color: var(--mainColour);
    font-family: 'Just Another Hand', cursive;
+
  }
 
 /***************************
@@ -79,7 +80,7 @@ a{
  .nav-container{
    display: flex;
    justify-content: space-around;
-   position: relative;
+
  }
 
  /* Navigation items */
@@ -87,17 +88,16 @@ a{
  .navList{
 display: flex;
 flex-direction: column;
-position: absolute;
+position: fixed;
 justify-content: space-around;
-background: var(--navMenuColour);
-width: max-content;
-height: max-content;
-top: 60%;
+background: rgba(0, 0, 0, .89);
+width: 100%;
+height: 100%;
+top: 0%;
 left: 0%;
-z-index: 5;
+z-index: 1;
 padding: var(--navMenuPadding);
 border: 1px solid black;
-margin-top: 15%;
  }
 
  .navList li{
@@ -126,6 +126,7 @@ margin-top: 15%;
   font-size: var(--fontSize);
   padding: 0;
   position: relative;
+  color: white;
 }
 
 
@@ -134,6 +135,7 @@ margin-top: 15%;
   transform: translateY(-15%);
   font-weight: var(--fontWeight);
   transition: color .3s ease-in-out;
+  color: white;
 }
 
 .nav-icon a:hover, .nav-icon a:focus{
@@ -639,11 +641,9 @@ margin-top: 15%;
      Men and Women
    *******************/
     .men-section-product-container, .women-section-product-container{
-       height: 30vh;
+       height: 40vh;
 
     }
-
-
 
 
 /**************
