--- a/style.css
+++ b/style.css
@@ -64,14 +64,14 @@ a{
   and logo Styling
  **************************/
 
- header{
+ /* header{
    display: flex;
    flex-direction: column;
    position: relative;
    height: auto;
- }
+ } */
 
- .main-header{
+ header{
    font-size: 1.3rem;
    height: 15vh;
    display: flex;
@@ -85,12 +85,38 @@ a{
 
  /**Search bar**/
 
- .search-bar-container{
-   align-self: flex-end;
-   height: 2vh;
-   margin-top: 2%;
-   margin-right: 4%;
+ .search-and-cart-container{
+   display: flex;
  }
+
+
+.search-bar{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 4;
+  background: white;
+}
+
+#userInput{
+  position: absolute;
+  top: 5%;
+  left: 40%;
+  padding: 0 4rem;
+  border: none;
+  border-bottom: 2px solid red;
+  outline: none;
+  font-size: 2rem;
+}
+
+.close-search-btn{
+  position: absolute;
+  top: 2%;
+  left: 2%;
+}
+
 
 
  /*Navigation Container*/
@@ -147,7 +173,7 @@ transform: translateX(-100%);
    margin-bottom: 2%;
  }
 
- /*******Icons styling*********/
+ /******* nav Icons styling*********/
 
 .nav-icon{
   /* display: flex; */
