--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ a{
  }
 
 
-.search-bar{
+/* .search-bar{
   position: fixed;
   top: 0;
   right: 0;
@@ -98,9 +98,9 @@ a{
   left: 0;
   z-index: 4;
   background: white;
-}
+} */
 
-#userInput{
+/* #userInput{
   position: absolute;
   top: 5%;
   left: 40%;
@@ -109,7 +109,7 @@ a{
   border-bottom: 2px solid red;
   outline: none;
   font-size: 2rem;
-}
+} */
 
 .close-search-btn{
   position: absolute;
