--- a/style.css
+++ b/style.css
@@ -89,32 +89,52 @@ a{
    display: flex;
  }
 
+ .search-btn:hover{
+    color: rgba(0, 0, 0, 0.5);
+ }
 
-/* .search-bar{
+
+.search-bar{
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 4;
+  z-index: 1;
   background: white;
-} */
+  transform: translateY(-100%);
+  transition: transform .65s ease-in-out;
+}
 
-/* #userInput{
+#userInput{
   position: absolute;
   top: 5%;
-  left: 40%;
-  padding: 0 4rem;
+  right: 50%;
+  padding: 0 .25em;
+  width: 80%;
+  height: 2.5rem;
   border: none;
   border-bottom: 2px solid red;
   outline: none;
   font-size: 2rem;
-} */
+  transform: translateX(50%);
+}
+
+
+
+#userInput:focus{
+  box-shadow: inset 0 2px 3px rgba(255, 0, 0, 0.5);
+  outline: none;
+}
 
 .close-search-btn{
   position: absolute;
   top: 2%;
   left: 2%;
+}
+
+.close-search-btn:hover{
+  color: rgba(0, 0, 0, 0.5);
 }
 
 
