--- a/style.css
+++ b/style.css
@@ -100,16 +100,20 @@ a{
   right: 0;
   bottom: 0;
   left: 0;
+  height: 100vh;
   z-index: 1;
   background: white;
   transform: translateY(-100%);
   transition: transform .65s ease-in-out;
+  display: flex;
+  flex-direction: column;
+
 }
 
 #userInput{
-  position: absolute;
-  top: 5%;
-  right: 50%;
+  position: relative;
+  /* top: 5%; */
+  /* right: 50%; */
   padding: 0 .25em;
   width: 80%;
   height: 2.5rem;
@@ -117,7 +121,9 @@ a{
   border-bottom: 2px solid red;
   outline: none;
   font-size: 2rem;
-  transform: translateX(50%);
+  margin: 0 auto;
+  margin-top: 5%;
+  /* transform: translateX(50%); */
 }
 
 
@@ -128,7 +134,7 @@ a{
 }
 
 .close-search-btn{
-  position: absolute;
+  position: relative;
   top: 2%;
   left: 2%;
 }
@@ -137,7 +143,41 @@ a{
   color: rgba(0, 0, 0, 0.5);
 }
 
+.result-container{
+  height: 20vh;
+  margin: 0 auto;
+  margin-top: 5%;
+  width: 80%;
+  border-bottom: 1px solid grey;
+  padding-bottom: 2%;
+  display: flex;
+}
 
+.trainer-details{
+  /* align-self: center; */
+  margin-left: 2%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  /* height: 70%; */
+  /* background: red; */
+}
+
+.result-img{
+  height: 100%;
+}
+
+.view-btn{
+  background: var(--secondaryColour);
+  text-align: center;
+  color: var(--mainColour);
+  font-size: 2rem;
+  /* padding: ; */
+}
+
+.view-btn:hover{
+  background: var(--btnColorDilute);
+}
 
  /*Navigation Container*/
  .nav-container{
@@ -196,8 +236,8 @@ transform: translateX(-100%);
  /******* nav Icons styling*********/
 
 .nav-icon{
-  /* display: flex; */
-position: relative;
+  
+  position: relative;
   color: white;
 }
 
