--- a/style.css
+++ b/style.css
@@ -98,22 +98,20 @@ header {
 
 #userInput {
   position: relative;
-  /* top: 5%; */
-  /* right: 50%; */
   padding: 0 0.25em;
   width: 80%;
-  height: 2.5rem;
+  height: 3.5rem;
   border: none;
-  border-bottom: 2px solid red;
+  border-bottom: 2px solid rgb(131, 95, 95);
   outline: none;
   font-size: 2rem;
   margin: 0 auto;
   margin-top: 5%;
-  /* transform: translateX(50%); */
 }
 
+#userInput:hover,
 #userInput:focus {
-  box-shadow: inset 0 2px 3px rgba(255, 0, 0, 0.5);
+  border: 2px solid var(--secondaryColour);
   outline: none;
 }
 
@@ -142,7 +140,7 @@ header {
   margin-left: 2%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   /* height: 70%; */
   /* background: red; */
 }
