[AM]: tried given search result functionality

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ header {
   color: rgba(0, 0, 0, 0.5);
 }
 
-.result-container {
+.result {
   height: 20vh;
   margin: 0 auto;
   margin-top: 5%;
