--- a/style.css
+++ b/style.css
@@ -87,14 +87,14 @@ header {
   right: 0;
   bottom: 0;
   left: 0;
-  min-height: 100vh;
-  z-index: 1;
+  height: 100vh;
+  z-index: 8;
   background: white;
   transform: translateY(-100%);
   transition: transform 0.65s ease-in-out;
-  display: grid;
-  grid-template-rows: auto;
-  grid-auto-rows: auto;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
 }
 
 #userInput {
@@ -108,6 +108,7 @@ header {
   font-size: 2rem;
   margin: 0 auto;
   margin-top: 5%;
+  padding: 0.5em 0;
 }
 
 #userInput:hover,
@@ -117,7 +118,7 @@ header {
 }
 
 .close-search-btn {
-  position: relative;
+  position: absolute;
   top: 2%;
   left: 2%;
 }
@@ -130,16 +131,23 @@ header {
   height: auto;
   display: flex;
   flex-direction: column;
+  width: 80%;
+  margin: 0 auto;
+  padding-bottom: 1.5rem;
 }
 
 .result {
   height: 20vh;
   margin: 0 auto;
   margin-top: 5%;
-  width: 80%;
+  width: 100%;
   border-bottom: 1px solid grey;
   padding-bottom: 2%;
   display: flex;
+}
+
+.result-section-title {
+  padding-top: 1.5rem;
 }
 
 .trainer-details {
