--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ header {
   width: 100%;
   border-bottom: 1px solid grey;
   padding-bottom: 2%;
-  display: flex;
+  display: none;
 }
 
 .result-section-title {
