--- a/contactStyle.css
+++ b/contactStyle.css
@@ -207,8 +207,6 @@ header {
 
 .nav-container + .logo {
   height: 50px;
-  /* border-bottom: 2px solid black;
-   border-top: 2px solid green; */
   margin-bottom: 2%;
 }
 
@@ -313,6 +311,7 @@ header {
   font-size: 5rem;
   margin: 0 auto;
   position: relative;
+  letter-spacing: var(--letterSpacing);
 }
 
 .dark-filter {
@@ -331,20 +330,131 @@ header {
 
 .main {
   text-align: center;
-  padding: calc(var(--padding) * 1.5) 0;
+  margin-top: 2rem;
 }
 
 /*****************
-   
+     Form
 ******************/
 
+.form-title,
 .page-title {
-  margin-bottom: 3%;
+  /* margin-bottom: 3%; */
   font-size: calc(var(--headingSize) * 1.1);
   letter-spacing: var(--letterSpacing);
   color: black;
 }
 
+.comment-form {
+  width: 100%;
+  height: 70vh;
+  /* background-color: #dd2a7b; */
+  border: 2px solid var(--btnColorDilute);
+  box-shadow: 0.5px 1px 1.5px rgba(0, 0, 0, 0.12),
+    0.75px 1.25px 1.75px rgba(0, 0, 0, 0.5), 1px 1.5px 2px rgba(0, 0, 0, 0.12);
+  margin: 1.5rem auto;
+  padding: 0.75em;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr) 2fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-areas:
+    "fnl fni"
+    "lnl lni"
+    "eml emi"
+    "pl pi"
+    "cmtl cmti"
+    "submit submit";
+  grid-gap: 1.5%;
+}
+
+input {
+  font-family: inherit;
+  font-size: 1.5rem;
+  height: 3rem;
+  padding: 0 0.2em;
+  letter-spacing: var(--letterSpacing);
+  outline: none;
+  border: none;
+  border-bottom: 2px solid var(--btnColorDilute);
+  align-self: center;
+}
+
+label {
+  font-size: 2rem;
+  letter-spacing: var(--letterSpacing);
+  justify-self: start;
+  align-self: center;
+}
+
+.first-name {
+  grid-area: fni;
+}
+
+.first-name-label {
+  grid-area: fnl;
+}
+
+.last-name {
+  grid-area: lni;
+}
+
+.last-name-label {
+  grid-area: lnl;
+}
+
+.email {
+  grid-area: emi;
+}
+
+.email-label {
+  grid-area: eml;
+}
+
+.phone-number {
+  grid-area: pi;
+}
+
+.phone-label {
+  grid-area: pl;
+}
+
+.comment {
+  grid-area: cmti;
+  resize: none;
+  font-size: 1.5rem;
+  font-family: inherit;
+  letter-spacing: var(--letterSpacing);
+  border: none;
+  border-bottom: 2px solid var(--btnColorDilute);
+  outline: none;
+  padding: 0.25em 0.2em;
+}
+
+.comment-label {
+  grid-area: cmtl;
+  align-self: start;
+}
+
+.form-submit-btn {
+  grid-area: submit;
+  font-size: 1.75rem;
+  padding: 0.35em 1.95em;
+  background-color: var(--secondaryColour);
+  place-self: center;
+  color: white;
+}
+
+.form-submit-btn:hover,
+.form-submit-btn:focus {
+  background-color: var(--btnColorDilute);
+}
+
+input:focus,
+.comment:focus,
+input:hover,
+.comment:hover {
+  box-shadow: inset 0 -1px 5px red;
+}
 /***************
   Icons within
   body styling
@@ -359,6 +469,7 @@ header {
   border: 3px solid black;
   padding: var(--btnPadding);
   margin-right: 1%;
+  margin-top: 5%;
   position: relative;
 }
 
@@ -366,23 +477,9 @@ header {
   background-color: black;
 }
 
-.icon-container a:hover {
+.icon-container a .fa:hover {
   color: var(--mainColour);
 }
-
-/****facebook icon styling*****/
-
-/*****instagram icon styling*****/
-
-/*****twitter styling*****/
-
-/*****envelope icon styling*****/
-
-/*****phone icon styling****/
-
-/***********************
-  comment form styling
-***********************/
 
 /******************
   Footer and icons
@@ -427,4 +524,31 @@ header {
 
 .footerHI .fa-instagram:hover {
   color: #dd2a7b;
+}
+
+/*****************
+    media query
+ *****************/
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
+  .hero-title {
+    font-size: 3rem;
+  }
+
+  .form-title,
+  .page-title {
+    font-size: 2rem;
+  }
+
+  label {
+    font-size: 1.5rem;
+  }
+
+  input {
+    font-size: 1rem;
+  }
+
+  .fa-envelope {
+    font-size: 7rem;
+  }
 }
