--- a/sell.css
+++ b/sell.css
@@ -264,7 +264,7 @@ header {
 }
 
 .aboutIcon::after {
-  content: "About";
+  content: "Home";
 }
 
 .contactIcon::after {
@@ -272,7 +272,7 @@ header {
 }
 
 .sellIcon::after {
-  content: "Sell";
+  content: "About";
 }
 
 .shopIcon::after {
@@ -318,7 +318,7 @@ header {
   width: 90vw;
   background: url("Images/MaleTrainers/maleTrainer7.jpg"), rgba(0, 0, 0, 0.5);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
   background-position: center;
   background-attachment: fixed;
   margin: 0 auto;
@@ -352,6 +352,12 @@ header {
   margin-bottom: 1rem;
 }
 
+.main h1 {
+  text-align: center;
+  margin-top: 1rem;
+  font-size: 2.5rem;
+}
+
 /********************
  sell section styling  
  ********************/
@@ -373,6 +379,7 @@ header {
   border: 2px solid black;
   box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.12),
     1.5px 2.5px 4.5px rgba(0, 0, 0, 0.19), 2px 3px 5px rgba(0, 0, 0, 0.3);
+  height: auto;
 }
 
 .sell-img {
@@ -385,11 +392,34 @@ header {
   line-height: 130%;
   letter-spacing: var(--letterSpacing);
   padding: 0.5em;
+  height: 50%;
+  /* background-color: lightcoral; */
+}
+
+.sell-step {
+  display: block;
 }
 
 /*******************
    sell form styling
  *******************/
+.sell-form-wrapper {
+  background-color: bisque;
+  margin-top: 1.5rem;
+}
+
+.form-container {
+  background-color: blueviolet;
+  min-height: 40rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.form-section {
+  display: flex;
+  flex-direction: column;
+}
 
 /******************
   Footer and icons
@@ -432,4 +462,41 @@ header {
 
 .fa-instagram:hover {
   color: #dd2a7b;
+}
+
+/**************************
+        media queries  
+***************************/
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 780px) and (-webkit-min-device-pixel-ratio: 2) {
+  .logo {
+    transform: scale(0.6);
+  }
+
+  /********************
+ sell section styling  
+ ********************/
+
+  .sell-container {
+    display: flex;
+    /* background-color: yellow; */
+    /* height: 50vh; */
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 1rem 0;
+    width: 100%;
+  }
+
+  .sell-image-container {
+    /* background: linear-gradient(to right, red, blue); */
+    width: 100%;
+    /* flex-basis: 100%; */
+    border: 2px solid black;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.12),
+      1.5px 2.5px 4.5px rgba(0, 0, 0, 0.19), 2px 3px 5px rgba(0, 0, 0, 0.3);
+    margin: 0.6rem 0;
+  }
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
 }
