--- a/sell.css
+++ b/sell.css
@@ -404,23 +404,73 @@ header {
    sell form styling
  *******************/
 .sell-form-wrapper {
-  background-color: bisque;
+  /* background-color: bisque; */
   margin-top: 1.5rem;
+  padding-top: 0.5em;
 }
 
 .form-container {
-  background-color: blueviolet;
+  /* background-color: blueviolet; */
   min-height: 40rem;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  padding: 1em 0;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.12),
+    1.5px 2.5px 4.5px rgba(0, 0, 0, 0.19), 2px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
 .form-section {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  width: 90%;
+  /* height: 7rem; */
+  margin: 0.5em auto;
+  /* padding: 1.5em 0; */
 }
 
+label {
+  font-size: 1.5rem;
+}
+
+input:not(.image) {
+  font-size: 1.5rem;
+  font-family: inherit;
+  padding: 0.3em 0.15em;
+  margin-top: 0.3em;
+  outline: none;
+}
+
+.image {
+  /* background-color: pink; */
+  width: max-content;
+  font-size: 1.5rem;
+  font-family: inherit;
+  padding: 1rem 0;
+  outline: none;
+}
+
+input:not(.image):focus,
+input:not(.image):hover {
+  border: none;
+  box-shadow: 0 0 9px var(--secondaryColour);
+  outline: none;
+}
+
+.submit-btn {
+  margin: 0 auto;
+  font-size: 1.5rem;
+  background-color: var(--secondaryColour);
+  color: var(--mainColour);
+  padding: 0.3em 1em;
+  margin-top: 0.5rem;
+}
+
+.submit-btn:focus,
+.submit-btn:hover {
+  background-color: var(--btnColorDilute);
+}
 /******************
   Footer and icons
   within styling
