--- a/shop.css
+++ b/shop.css
@@ -307,3 +307,36 @@ header {
   padding: 0.1rem;
   border: 1px solid black;
 }
+/*******************
+     hero styling
+  ******************/
+
+.hero {
+  position: relative;
+  height: 50vh;
+  width: 90vw;
+  background: url("Images/MaleTrainers/maleTrainer15.jpg"), rgba(0, 0, 0, 0.5);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: center;
+  background-attachment: fixed;
+  margin: 0 auto;
+  border: 1px solid black;
+}
+
+.page-title {
+  text-align: center;
+  color: var(--mainColour);
+  font-size: 4.5rem;
+  margin: 0 auto;
+  position: relative;
+}
+
+.dark-filter {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 1));
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+}
